<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Notes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="urlimage">urlImage</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="add">ADD</string>
    <string name="are_you_sure_you_want_to_delete_n_this_note">Are you sure you want to delete\n this note?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="imagenote">imageNote</string>
    <string name="low">low</string>
    <string name="mid">mid</string>
    <string name="high">high</string>
    <string name="notes">Notes</string>
    <string name="title2">Title</string>
    <string name="subtitle2">Subtitle</string>
    <string name="notes2">Notes</string>
    <string name="notes3">Notes</string>
    <string name="all">all</string>
    <string name="high2">High</string>
    <string name="medium2">Medium</string>
    <string name="low2">Low</string>
    <string name="fab">fab</string>
    <string name="complete_action_using">Complete Action Using</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="red">red</string>
    <string name="cyan">cyan</string>
    <string name="orange">orange</string>
    <string name="green">green</string>
    <string name="yellow">yellow</string>
    <string name="pink">pink</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url2">Add URL</string>
</resources>