<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMiscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_dailog"
    android:orientation="vertical"
    android:padding="20dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/miscellaneous"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_note_color_1"
            android:padding="6dp"
            android:contentDescription="@string/red" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_note_color_2"
            android:padding="6dp"
            android:contentDescription="@string/cyan" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_note_color_3"
            android:padding="6dp"
            android:contentDescription="@string/orange" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_note_color_4"
            android:padding="6dp"
            android:contentDescription="@string/green" />

        <ImageView
            android:id="@+id/img5"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_marginStart="16dp"
            android:background="@drawable/bg_note_color_5"
            android:padding="6dp"
            android:contentDescription="@string/yellow" />

        <ImageView
            android:id="@+id/img6"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_marginStart="16dp"
            android:background="@drawable/bg_note_color_6"
            android:padding="6dp"
            android:contentDescription="@string/pink" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/pick_color"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/addImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_image_24"
            android:contentDescription="@string/imagenote" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/add_image"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/addURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_language_24"
            android:contentDescription="@string/urlimage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/add_url2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold
"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"/>


    </LinearLayout>


</LinearLayout>