<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
   >

    <View
        android:layout_width="130dp"
        android:layout_height="5dp"
        android:background="#814EC8"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/are_you_sure_you_want_to_delete_n_this_note"/>



    <TextView
        android:id="@+id/No"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="16sp"
        android:background="#8F8F8F"
        android:textColor="@color/white"
        android:gravity="center"/>

    <TextView
        android:id="@+id/Yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:textSize="16sp"
        android:background="#ff0000"
        android:textColor="@color/white"
        android:gravity="center"/>


</LinearLayout>