<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/addURL"
    android:background="#2c333d"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_baseline_language_24"
                android:contentDescription="@string/urlimage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/add_url"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

            <EditText
                android:id="@+id/inputURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_url"
                android:background="@drawable/text_bg"
               android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="16dp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:padding="10dp"
               >

                <TextView
                    android:id="@+id/textCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textSize="16sp"
                    android:layout_margin="12dp"
                    android:textStyle="bold"
                    android:textColor="#AB6FFF"/>

                <TextView
                    android:id="@+id/textAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textSize="16sp"
                    android:layout_margin="12dp"
                    android:textStyle="bold"
                    android:textColor="#AB6FFF"/>

            </LinearLayout>


    </LinearLayout>







</RelativeLayout>