<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.EditNoteFragment"
    android:background="#161618">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="669dp">


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="416dp"
            android:layout_height="631dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="visible">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/title2"
                app:hintTextColor="@color/white"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@drawable/text_bg"/>


            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:id="@+id/subtitleIndicator"
                    android:layout_width="10dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/black"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:hint="@string/subtitle2"
                    app:hintTextColor="@color/white"
                    android:textColorHint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSubTitle"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/text_bg1"
                        android:textColor="@color/white"


                        />


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageNote"
                    android:layout_width="match_parent"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/imagenote" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:background="@drawable/text_bg"
                    android:padding="10dp"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/prioLow"
                    android:layout_width="25dp"
                    android:layout_height="25dp"

                    android:background="@drawable/ic_green_24"
                    android:contentDescription="@string/low" />


                <ImageView
                    android:id="@+id/prioMid"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_yellow_24"
                    android:contentDescription="@string/mid" />

                <ImageView
                    android:id="@+id/prioHigh"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_red_24"
                    android:contentDescription="@string/high" />


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/white"
                android:hint="@string/notes2"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNote"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:gravity="start"
                    android:textColor="@color/white"
                    android:background="@drawable/text_bg"

                    />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <include layout="@layout/layout_miscellaneous" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>