<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment"
    android:background="#161618"
    android:theme="@style/Theme.Notes.NoActionBar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="666dp"
        android:layout_margin="7dp">

        <TextView
            android:id="@+id/text"
            style="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/notes3"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text">

            <ImageView
                android:id="@+id/allNotes"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/text_bg"
                android:src="@drawable/ic_filter_24"
                android:contentDescription="@string/all" />

            <TextView
                android:id="@+id/filterHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/text_bg"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingRight="20dp"
                android:paddingBottom="8dp"
                android:text="@string/high2"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/filterMed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/text_bg"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingRight="20dp"
                android:paddingBottom="8dp"
                android:text="@string/medium2"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/filterLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/text_bg"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:paddingRight="20dp"
                android:paddingBottom="8dp"
                android:text="@string/low2"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:theme="@style/AppSearchView"
            app:iconifiedByDefault="false"
            app:layout_constraintTop_toBottomOf="@+id/linear"
            app:queryHint="Search Notes"
            app:searchIcon="@drawable/ic_baseline_search_24" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="start"
        app:fabAlignmentMode="center"
        app:fabCradleMargin="12dp"
        app:fabCradleRoundedCornerRadius="30dp"
        app:hideOnScroll="true"
        android:backgroundTint="#814EC8"
        app:menu="@menu/main_menu">

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_24"
        app:backgroundTint="#7815FF"
        app:layout_anchor="@id/bottomAppBar"
        app:maxImageSize="30dp"
        app:tint="@color/white"
        app:useCompatPadding="true"
        android:contentDescription="@string/fab"/>




</androidx.coordinatorlayout.widget.CoordinatorLayout>